# synthesis

./: Cargo.toml  README.md
benches/: synthesis_bench.rs
src/: lib.rs  main.rs
src/audio/: buffer.rs  mod.rs  output.rs
src/dsp/: interpolation.rs  math.rs  mod.rs  polyblep.rs
src/effects/: chorus.rs  compressor.rs  delay.rs  distortion.rs  effect.rs  mod.rs  phaser.rs  reverb.rs
src/engine/: context.rs  engine.rs  mod.rs  module.rs  synth_voice.rs  voice.rs
src/midi/: input.rs  mod.rs  parser.rs  state.rs
src/modulation/: matrix.rs  mod.rs  sequencer.rs  sources.rs
src/modules/: envelope.rs  filter.rs  lfo.rs  mod.rs  oscillator.rs
src/preset/: browser.rs  mod.rs  preset.rs
